--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -5,9 +5,10 @@
     <title>Tymoczko Scale Network: 7-Note Pressing Scales</title>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
-    
-    <script language="javascript" type="text/javascript" src="jquery.js"></script>
 
+    <!-- use jquery for websockets
+    websockets io goes here -->
+    
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" src="libraries/p5.sound.js"></script>
@@ -15,6 +16,7 @@
     <script language="javascript" type="text/javascript" src="vexflow-debug.js"></script>
     <script language="javascript" type="text/javascript" src="videoSwitchIndex.js"></script>
     <script language="javascript" type="text/javascript" src="data.js"></script>
+    <script language="javascript" type="text/javascript" src="lilypond.js"></script>
     <script language="javascript" type="text/javascript" src="voicings.js"></script>
     <script language="javascript" type="text/javascript" src="notation.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
