adding interactive score for Network Impressions

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ Consumer Sound Art:<br>BUY BUY BUY BUY BUY</A></th></table></td>
 Modules of<br>that Good Noise</A></th>
 </table></td><td>
 
-<table border=9 frame=box cellpadding=10 bgcolor=#45668e><th><A HREF="USecon08.htm#DURABLES">
-Durations of Notes<br>& Rhythms</A></th>
+<table border=9 frame=box cellpadding=10 bgcolor=#45668e><th><A HREF="impressions/index.html">
+Network<br>Impressions</A></th>
 </table></td><td>
 
 <table border=9 frame=box cellpadding=10 bgcolor=#ff0084><th><A HREF="midi/miditest.html">
