--- a/impressions/index.html
+++ b/impressions/index.html
@@ -240,7 +240,7 @@ function showSlides(n) {
       slides[i].style.display = "none";  
   }
 
-  slides[slideIndex-1].style.display = "block";  
+  slides[slideIndex].style.display = "block";  
 }
 </script>
 
