--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ SoundCloud</A></th>
 </table></td>
 
 <td><table border=9 frame=box cellpadding=10 bgcolor=#4CF87B><th><A HREF="scale_netw/index.html">
-Tymoczko Scale Network: <br> 7-Note Pressing Scales</A></th>
+Scale Network Interface <br> with notation and sound</A></th>
 </table></td>
 
 <td><table border=9 frame=box cellpadding=10 bgcolor=#aad450><th><A href="pizza_ladder/index.html">
@@ -124,7 +124,7 @@ instruments<br>of the "sound"<br>music</A></th>
 
 <TD>
 <table border=9 frame=box cellpadding=10 bgcolor=#fb8f3d><th><A HREF="visualizer/index.html">
-scale_netw<br>MIDI output:<br>chord subsets</A></th>
+scale network interface<br>JAZZ CHORD output w supersets</A></th>
 </table></td>
 
 </tr>
