added instructions to top of page

--- a/impressions/index.html
+++ b/impressions/index.html
@@ -71,7 +71,7 @@ img {vertical-align: middle;}
 </style>
 </head>
 <body>
-
+<p>find the text box (bottom left) and start typing to trigger the next measure!!</p>
 <div class="slideshow-container">
 
 <div class="mySlides fade">
