--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -17,6 +17,7 @@
     <script language="javascript" type="text/javascript" src="videoSwitchIndex.js"></script>
     <script language="javascript" type="text/javascript" src="data.js"></script>
     <script language="javascript" type="text/javascript" src="lilypond.js"></script>
+    <script language="javascript" type="text/javascript" src="metadata.js"></script>
     <script language="javascript" type="text/javascript" src="voicings.js"></script>
     <script language="javascript" type="text/javascript" src="notation.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
