--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -37,8 +37,36 @@ body {margin:0;}
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  position: absolute;
+  right: 0px;
   font-size: 1;
   width: 100%;
+}
+
+.menu {
+  overflow: hidden;
+  background-color: #efefef;
+  position: absolute;
+  right: 0px;
+  width: 18%;
+  height: 40%;
+}
+
+.menu a {
+  float: right;
+  display: block;
+  color: #efefef;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  right: 0px;
+}
+
+.menu a:hover {
+  background: #ddd;
+  color: black;
+  align-items: right;
 }
 
 .navbar {
@@ -46,6 +74,7 @@ body {margin:0;}
   background-color: #efefef;
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 18%;
   height: 40%;
 }
@@ -106,12 +135,21 @@ body {margin:0;}
   cursor: pointer;
 }
 
+supersets {
+  white-space: pre
+}
+
 
 </style>
   </head>
   <body>
   	<div id="boo"></div>
-    <p align="center">
+    <div class="menu">
+      <p id="chord_name" align="center"></p>
+      <br />
+      <p>scalar supersets</p>
+      <div id="supersets"></id>
+    </div>
     <div class="navbar">
       <p>ALLOWABLE ROOT MOVEMENT BETWEEN CHORDS</p>
 <label class="switch">
