capitalized scalar supersets

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -147,7 +147,7 @@ supersets {
     <div class="menu">
       <p id="chord_name" align="center"></p>
       <br />
-      <p>scalar supersets</p>
+      <p>SCALAR SUPERSETS</p>
       <div id="supersets"></id>
     </div>
     <div class="navbar">
