--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -29,7 +29,7 @@
     <style>
 body {margin:0;}
 
-/*html{cursor: none;}*/
+/*html{cursor: none; overflow:hidden;}*/
 
 #sound_on_off_button {
   z-index: 100;
@@ -218,6 +218,7 @@ div:after {
 
 </style>
   </head>
+  
   <body>
 
     <button id="sound_on_off_button"> sound on </button>
