--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -29,7 +29,7 @@
     <style>
 body {margin:0;}
 
-/*html{cursor: none; overflow:hidden;}*/
+html{overflow:hidden;}
 
 #sound_on_off_button {
   z-index: 100;
