update mobile sound

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.6.3/Tone.min.js"></script>
     
     <script language="javascript" type="text/javascript" src="vexflow-debug.js"></script>
+
     <script language="javascript" type="text/javascript" src="videoSwitchIndex.js"></script>
     <script language="javascript" type="text/javascript" src="data.js"></script>
     <script language="javascript" type="text/javascript" src="lilypond.js"></script>
@@ -23,6 +24,7 @@
     <script language="javascript" type="text/javascript" src="voicings.js"></script>
     <script language="javascript" type="text/javascript" src="notation.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
+
 
 
     <!--<script src="miditest.js"></script>-->
@@ -36,6 +38,8 @@ html{overflow:hidden;}
   position: fixed;
   bottom: 0;
   right: 0;
+  width: 100px;
+  height: 100px;
 }
 
 
