--- a/impressions/index.html
+++ b/impressions/index.html
@@ -71,7 +71,7 @@ img {vertical-align: middle;}
 </style>
 </head>
 <body>
-<p>find the text box (bottom left) and start typing to trigger the next measure!!</p>
+
 <div class="slideshow-container">
 
 <div class="mySlides fade">
@@ -184,22 +184,41 @@ img {vertical-align: middle;}
 <script>
 num_convert = {
   0 : 0,
-  1 : 48, 
-  2 : 53, 
-  3 : 46, 
-  4 : 48, 
-  5 : 48, 
-  6 : 53, 
-  7 : 43, 
-  8 : 43, 
-  9 : 52, 
+  1 : 18, 
+  2 : 8, 
+  3 : 25, 
+  4 : 35, 
+  5 : 34, 
+  6 : 13, 
+  7 : 44, 
+  8 : 6, 
+  9 : 7, 
   10 : 45, 
-  11 : 50, 
-  12 : 43, 
-  13 : 50, 
-  14 : 50, 
-  15 : 47, 
-  16 : 52};
+  11 : 28, 
+  12 : 38, 
+  13 : 17, 
+  14 : 46, 
+  15 : 36, 
+  16 : 5};
+
+  scale_convert = {
+  0 : 0,
+  1 : [-2,0,1,3,5,6,8], 
+  2 : [-2,0,1,3,5,6,9], 
+  3 : [-2,0,1,3,5,7,9], 
+  4 : [-2,0,1,4,5,7,9], 
+  5 : [-2,0,2,4,5,7,9], 
+  6 : [-2,0,2,4,6,7,9], 
+  7 : [-2,0,2,3,6,7,9], 
+  8 : [-2,0,2,3,5,7,9], 
+  9 : [-2,0,2,3,5,6,9], 
+  10 : [-2,0,2,3,5,6,8],
+  11 : [-2,-1,2,3,5,6,8], 
+  12 : [-2,-1,1,3,5,6,8], 
+  13 : [-2,-1,1,3,5,7,8],  
+  14 : [-2,0,1,3,5,7,8],
+  15 : [-2,0,1,4,5,7,8], 
+  16 : [-2,0,2,4,5,7,8]};
 
 var slideIndex = 1;
 showSlides(slideIndex);
@@ -213,17 +232,27 @@ function plusSlides(n) {
         midi.outputs.forEach(function (port, port_id) {
             if(port.name == "IAC Driver INTERSTICES"){
               console.log("MIDI connection was successful");
-              for( let i = 0; i < 127; i++ ) {
-                port.send([144, i, 0]);
-              }
-              port.send([144, num_convert[slideIndex-1], 127]);
-              console.log(slideIndex, num_convert[slideIndex]);
 
-              for( let i = 0; i < 127; i++ ) {
+              port.send([144, slideIndex-1, 127]);
+              console.log(slideIndex, slideIndex-1);
+
+              for( let i = 0; i < 73; i++ ) {
                 port.send([145, i, 0]);
               }
-              port.send([145, slideIndex-1, 127]);
-              console.log(slideIndex-1);
+              
+              port.send([145, scale_convert[slideIndex-1][0]+24, 127]);
+              port.send([145, scale_convert[slideIndex-1][0]+36, 127]);
+              port.send([145, scale_convert[slideIndex-1][4]+36, 127]);
+              port.send([145, scale_convert[slideIndex-1][0]+48, 127]);
+              port.send([145, scale_convert[slideIndex-1][2]+48, 127]);
+              port.send([145, scale_convert[slideIndex-1][4]+48, 127]);
+              port.send([145, scale_convert[slideIndex-1][6]+48, 127]);
+              port.send([145, scale_convert[slideIndex-1][0]+60, 127]);
+              port.send([145, scale_convert[slideIndex-1][1]+60, 127]);
+              port.send([145, scale_convert[slideIndex-1][2]+60, 127]);
+              port.send([145, scale_convert[slideIndex-1][3]+60, 127]);
+              port.send([145, scale_convert[slideIndex-1][4]+60, 127]);
+              port.send([145, scale_convert[slideIndex-1][5]+60, 127]);
           }
       })       
     }
