made SCALAR SUPERSETS clickable / navigate-able

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -84,7 +84,10 @@ $(".plus").click(function(){
   height: 40%;
 }
 
-.menu a {
+#supersets a {
+  display: block;
+}
+/*.menu a {
   float: right;
   display: block;
   color: #efefef;
@@ -99,7 +102,7 @@ $(".plus").click(function(){
   background: #ddd;
   color: black;
   align-items: right;
-}
+}*/
 
 .navbar {
   overflow: hidden;
@@ -295,11 +298,7 @@ div:after {
       <button class="button" onclick="killswitch()">kill MIDI</button>
     </div>
     
-
-
-
   </body>
-  <a href="#" class "speaker">
   <span></span>
 </a>
 
