--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -72,6 +72,7 @@ $(".plus").click(function(){
   position: absolute;
   right: 0px;
   font-size: 1;
+  font-family: "Helvetica", sans-serif;
   width: 100%;
 }
 
@@ -80,12 +81,14 @@ $(".plus").click(function(){
   background-color: #efefef;
   position: absolute;
   right: 0px;
+  font-family: "Helvetica", sans-serif;
   width: 18%;
   height: 40%;
 }
 
 #supersets a {
   display: block;
+  font-family: "Helvetica", sans-serif;
 }
 /*.menu a {
   float: right;
@@ -110,6 +113,7 @@ $(".plus").click(function(){
   position: fixed;
   bottom: 0;
   left: 0;
+  font-family: "Helvetica", sans-serif;
   width: 18%;
   height: 40%;
 }
@@ -121,6 +125,7 @@ $(".plus").click(function(){
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: "Helvetica", sans-serif;
   font-size: 17px;
 }
 
@@ -171,6 +176,7 @@ $(".plus").click(function(){
 }
 
 supersets {
+  font-family: "Helvetica", sans-serif;
   white-space: pre
 }
 
