Thank you to Kyle Grover for the once-over!

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -259,7 +259,7 @@ div:after {
       <p id="chord_name" align="center"></p>
       <br />
       <p>SCALAR SUPERSETS</p>
-      <div id="supersets"></id>
+      <div id="supersets"></div>
     </div>
     <div class="navbar">
       <p>ALLOWABLE ROOT MOVEMENT BETWEEN CHORDS</p>
@@ -304,9 +304,10 @@ div:after {
       <button class="button" onclick="killswitch()">kill MIDI</button>
     </div>
     
-  </body>
+  
   <span></span>
 </a>
 
 <script language="javascript" type="text/javascript" src="make_sound.js"></script>
+  </body>
 </html>
