--- a/impressions/index.html
+++ b/impressions/index.html
@@ -77,7 +77,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">0 / 16</div>
   <img src="assets/00.jpg" style="width:100%">
-  <div class="text">get ready!</div>
+  <div class="text" font-size: 15px; ><3 chordas</div>
 </div>
 
 <div class="mySlides fade">
