Added emotional indicators

--- a/impressions/index.html
+++ b/impressions/index.html
@@ -77,102 +77,102 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">0 / 16</div>
   <img src="assets/00.jpg" style="width:100%">
-  <div class="text" font-size: 15px; ><3 chordas</div>
+  <div class="text" font-size: 30px; ><3 chordas</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 16</div>
   <img src="assets/01.jpg" style="width:100%">
-  <div class="text">C diatonic</div>
+  <div class="text">translucent</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 16</div>
   <img src="assets/02.jpg" style="width:100%">
-  <div class="text">F diatonic</div>
+  <div class="text">silken</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 16</div>
   <img src="assets/03.jpg" style="width:100%">
-  <div class="text">B♭ acoustic</div>
+  <div class="text">feathery</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">4 / 16</div>
   <img src="assets/04.jpg" style="width:100%">
-  <div class="text">C harmonic major</div>
+  <div class="text">furred</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">5 / 16</div>
   <img src="assets/05.jpg" style="width:100%">
-  <div class="text">C harmonic minor</div>
+  <div class="text">honeyed</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">6 / 16</div>
   <img src="assets/06.jpg" style="width:100%">
-  <div class="text">F acoustic</div>
+  <div class="text">glossy</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">7 / 16</div>
   <img src="assets/07.jpg" style="width:100%">
-  <div class="text">G harmonic major</div>
+  <div class="text">emblazoned</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">8 / 16</div>
   <img src="assets/08.jpg" style="width:100%">
-  <div class="text">G diatonic</div>
+  <div class="text">ornate</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">9 / 16</div>
   <img src="assets/09.jpg" style="width:100%">
-  <div class="text">E harmonic minor</div>
+  <div class="text">elastic</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">10 / 3</div>
   <img src="assets/10.jpg" style="width:100%">
-  <div class="text">A acoustic</div>
+  <div class="text">vague</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">11 / 16</div>
   <img src="assets/11.jpg" style="width:100%">
-  <div class="text">D diatonic</div>
+  <div class="text">sweltering</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">12 / 16</div>
   <img src="assets/12.jpg" style="width:100%">
-  <div class="text">G acoustic</div>
+  <div class="text">grating</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">13 / 16</div>
   <img src="assets/13.jpg" style="width:100%">
-  <div class="text">D harmonic minor</div>
+  <div class="text">disfigured</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">14 / 16</div>
   <img src="assets/14.jpg" style="width:100%">
-  <div class="text">D harmonic major</div>
+  <div class="text">raw</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">15 / 16</div>
   <img src="assets/15.jpg" style="width:100%">
-  <div class="text">B harmonic minor</div>
+  <div class="text">severe</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">16 / 16</div>
   <img src="assets/16.jpg" style="width:100%">
-  <div class="text">E acoustic</div>
+  <div class="text">uncompromising</div>
 </div>
 
 
