updated texture indications

--- a/impressions/index.html
+++ b/impressions/index.html
@@ -44,7 +44,7 @@ img {vertical-align: middle;}
 /* Caption text */
 .text {
   color: 255;
-  font-size: 15px;
+  font-size: 60px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -154,7 +154,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">13 / 16</div>
   <img src="assets/13.jpg" style="width:100%">
-  <div class="text">disfigured</div>
+  <div class="text">serrated</div>
 </div>
 
 <div class="mySlides fade">
