put the DK arps in G modes

--- a/impressions/index.html
+++ b/impressions/index.html
@@ -240,19 +240,19 @@ function plusSlides(n) {
                 port.send([145, i, 0]);
               }
               
-              port.send([145, scale_convert[slideIndex-1][0]+24, 127]);
-              port.send([145, scale_convert[slideIndex-1][0]+36, 127]);
-              port.send([145, scale_convert[slideIndex-1][4]+36, 127]);
-              port.send([145, scale_convert[slideIndex-1][0]+48, 127]);
-              port.send([145, scale_convert[slideIndex-1][2]+48, 127]);
-              port.send([145, scale_convert[slideIndex-1][4]+48, 127]);
-              port.send([145, scale_convert[slideIndex-1][6]+48, 127]);
-              port.send([145, scale_convert[slideIndex-1][0]+60, 127]);
-              port.send([145, scale_convert[slideIndex-1][1]+60, 127]);
-              port.send([145, scale_convert[slideIndex-1][2]+60, 127]);
-              port.send([145, scale_convert[slideIndex-1][3]+60, 127]);
-              port.send([145, scale_convert[slideIndex-1][4]+60, 127]);
-              port.send([145, scale_convert[slideIndex-1][5]+60, 127]);
+              port.send([145, scale_convert[slideIndex-1][0]+24+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][0]+36+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][4]+36+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][0]+48+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][2]+48+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][4]+48+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][6]+48+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][0]+60+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][1]+60+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][2]+60+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][3]+60+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][4]+60+9, 127]);
+              port.send([145, scale_convert[slideIndex-1][5]+60+9, 127]);
           }
       })       
     }
