--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
 </HEAD>
 <link rel="stylesheet" type="text/css" href="style.css">
 <STYLE>
-
 H2 {font-size:18pt; text-align:center; color:#00957E; }
-
 H3 {color:#AA77AA; font-size:20pt;}
 H4 {margin-left:0.2in; margin-right:0.2in; text-align:center;
 font-size:18pt; color:#454311; background:#F617FF }
-
 LI {font-size:18pt; text-indent:0.2in; text-weight:400; line-height:1.2em;
 background:#ea4c89; border-style:outset; border-color: white; border-width:5px; padding:20px; }
-
 UL {background:#AAFFFF; border: 20px black; padding:20px; spacing:20px;}
 TH {font-size:18pt}
 TD {font-size:16pt; text-align:center; spacing: 10px;}
@@ -68,7 +64,7 @@ SoundCloud</A></th>
 </table></td>
 
 <td><table border=9 frame=box cellpadding=10 bgcolor=#4CF87B><th><A HREF="scale_netw/index.html">
-Scale Network Interface <br> with notation and sound</A></th>
+Old 80's Version <br> Network</A></th>
 </table></td>
 
 <td><table border=9 frame=box cellpadding=10 bgcolor=#aad450><th><A href="pizza_ladder/index.html">
@@ -101,12 +97,12 @@ Consumer Sound Art:<br>BUY BUY BUY BUY BUY</A></th></table></td>
 Modules of<br>that Good Noise</A></th>
 </table></td><td>
 
-<table border=9 frame=box cellpadding=10 bgcolor=#45668e><th><A HREF="impressions/index.html">
-Network<br>Impressions</A></th>
+<table border=9 frame=box cellpadding=10 bgcolor=#45668e><th><A HREF="USecon08.htm#DURABLES">
+Durations of Notes<br>& Rhythms</A></th>
 </table></td><td>
 
-<table border=9 frame=box cellpadding=10 bgcolor=#ff0084><th><A HREF="midi/miditest.html">
-Vibrational<br>Frequencies</A></th>
+<table border=9 frame=box cellpadding=10 bgcolor=#ff0084><th><A HREF="midi/index.html">
+Updated<br>Scale<br>Navigator</A></th>
 </table></td>
 
 </tr>
@@ -124,7 +120,7 @@ instruments<br>of the "sound"<br>music</A></th>
 
 <TD>
 <table border=9 frame=box cellpadding=10 bgcolor=#fb8f3d><th><A HREF="visualizer/index.html">
-scale network interface<br>JAZZ CHORD output w supersets</A></th>
+deprecated<br>INTERSTICES<br>midi driver</A></th>
 </table></td>
 
 </tr>
@@ -138,7 +134,7 @@ scale network interface<br>JAZZ CHORD output w supersets</A></th>
      height="100"
      title="A T-Rex on display in the Manchester University Museum"></CENTER>
 
-
+ 
 
 
 
