added midi mapper to homepage

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ Consumer Sound Art:<br>BUY BUY BUY BUY BUY</A></th></table></td>
 Modules of<br>that Good Noise</A></th>
 </table></td><td>
 
-<table border=9 frame=box cellpadding=10 bgcolor=#45668e><th><A HREF="USecon08.htm#DURABLES">
-Durations of Notes<br>& Rhythms</A></th>
+<table border=9 frame=box cellpadding=10 bgcolor=#45668e><th><A HREF="mapper/client.html">
+MIDI mapper<br>4 Ableton Scale Rack</A></th>
 </table></td><td>
 
 <table border=9 frame=box cellpadding=10 bgcolor=#ff0084><th><A HREF="midi/index.html">
