added text intstructions

--- a/mapper/client.html
+++ b/mapper/client.html
@@ -95,7 +95,11 @@
 	<body>
 
 
-		<p style="text-align:right;">press the "map" button to map your scale_rack</p>
+		<p style="text-align:center;">load up a midi track in ableton with the SCALE RACK<br>
+			press the "map" button to map your scale_rack<br>
+			make sure that the range is 0 - 47<br>
+			cool
+		</p>
 		
 	    <p align="center">
 
