--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Consumer Sound Art:<br>BUY BUY BUY BUY BUY</A></th></table></td>
 
 <tr><td>
 <table border=9 frame=box cellpadding=10 bgcolor=#0072b1><th><A HREF="impressions/index.html">
-CHORDAS:<br>Heptagrams<br>Interactive Screen Score/A></th>
+CHORDAS:<br>Heptagrams<br>Interactive Screen Score</A></th>
 </table></td><td>
 
 <table border=9 frame=box cellpadding=10 bgcolor=#45668e><th><A HREF="mapper/client.html">
