--- a/midi/index.html
+++ b/midi/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" >
   <head>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139431988-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-139431988-1');
+    </script>
+    
     <meta charset="UTF-8">
     <title>Tymoczko Scale Network: 7-Note Pressing Scales</title>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
