added google analytics

--- a/midi/index.html
+++ b/midi/index.html
@@ -13,7 +13,7 @@
     </script>
     
     <meta charset="UTF-8">
-    <title>Tymoczko Scale Network: 7-Note Pressing Scales</title>
+    <title>Scale Navigator</title>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
 
