added user ID for session

--- a/midi/index.html
+++ b/midi/index.html
@@ -15,6 +15,10 @@
     </script>
     <!-- End Google Analytics -->
     
+    <script>
+      window.userID = Math.floor(Math.random()*100000)
+      </script>
+    
     <meta charset="UTF-8">
     <title>Scale Navigator</title>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
