--- a/scale_rack/download_scale_rack.html
+++ b/scale_rack/download_scale_rack.html
@@ -1,13 +1,17 @@
 <html>
 
 <head>
-	<title> </title>
-</head>head>
+<title>download scale rack</title>
+</head>
 
 <body>
-	<h1>Download </h1>
-
-
+<h1>download scale rack</h1>
+<p>download scale rack</p>
+<a href="scale_rack.adg" download scale rack>
+	<img src="SCALERACK.png">
+</a>
+<img src="SCALERACK.png">
 </body>
 
-</html>>
+
+</html>
