added scale rack download to homepage

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ Ur Ear Bones<br>Get Massaged</A></th>
 Consumer Sound Art:<br>BUY BUY BUY BUY BUY</A></th></table></td>
 
 <td>
-<table border=9 frame=box cellpadding=10 bgcolor=#5B9A68><th><A href="seraphina/index.html">
-🐶🐶🐶🐶<br>🐶🐶🐶🐶</A></th>
+<table border=9 frame=box cellpadding=10 bgcolor=#5B9A68><th><A href="scale_rack/download_scale_rack.html">
+download<br>7-note pressing scale<br>scale rack</A></th>
 </table></td>
 
 </tr>
