scale rack change

--- a/scale_rack/download_scale_rack.html
+++ b/scale_rack/download_scale_rack.html
@@ -6,11 +6,10 @@
 
 <body>
 <h1>download scale rack</h1>
-<p>download scale rack</p>
+<p>click on the image below to download scale rack</p>
 <a href="scale_rack.adg" download scale rack>
 	<img src="SCALERACK.png">
 </a>
-<img src="SCALERACK.png">
 </body>
 
 
