Scale Navigator sends MIDI cc to TouchDesigner

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ historia<br>juliana</A></th>
 instruments<br>of the "sound"<br>music</A></th>
 </table></td>
 
-<table border=9 frame=box cellpadding=10 bgcolor=#fb8f3d><th><A HREF="visualizer/index.html">
-deprecated<br>INTERSTICES<br>midi driver</A></th>
+<table border=9 frame=box cellpadding=10 bgcolor=#fb8f3d><th><A HREF="Visuals_index_output/index.html">
+Scale Navigator<br>sends MIDI cc<br>to TouchDesigner</A></th>
 </table></td>
 
 </tr>
