added the new scale navigator that has MLPs

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@ Old 80's Version <br> Network</A></th>
 <td><table border=9 frame=box cellpadding=10 bgcolor=#aad450><th><A href="pizza_ladder/index.html">
 Ur Ear Bones<br>Get Massaged</A></th>
 </table></td>
+    
+<td><table border=9 frame=box cellpadding=10 bgcolor=##a8f3ff><th><A href="all_pressing_scales/index.html">
+Ur Ear Bones<br>Get Massaged</A></th>
+</table></td>
+    
 
 </tr>
 
