added new scale nav including MLPs

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Ur Ear Bones<br>Get Massaged</A></th>
 </table></td>
     
 <td><table border=9 frame=box cellpadding=10 bgcolor=##a8f3ff><th><A href="all_pressing_scales/index.html">
-Ur Ear Bones<br>Get Massaged</A></th>
+ALL pressing scales<br>NETWORK</A></th>
 </table></td>
     
 
