fixed notation -- now works for MLPs also

--- a/all_pressing_scales/index.html
+++ b/all_pressing_scales/index.html
@@ -14,11 +14,19 @@
     <!-- <script language="javascript" src="libraries/p5.sound.js"></script> -->
     </script>
     <script language="javascript" type="text/javascript" src="data.js"></script>
+    <script language="javascript" type="text/javascript" src="vexflow-debug.js"></script>
+    <script language="javascript" type="text/javascript" src="lilypond.js"></script>
+    <script language="javascript" type="text/javascript" src="notation.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
     <style>
 body {margin:0;}
 html{overflow:hidden;}
+
+#boo {
+  position: fixed;
+  top: 0;
+}
 
   
 
@@ -27,6 +35,6 @@ html{overflow:hidden;}
   </head>
   
   <body>
-
+    <div id="boo"></div>
   </body>
 </html>
