--- a/index.html
+++ b/index.html
@@ -1,146 +1,70 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html>
-
-<HEAD>
-<TITLE>Nathan Turczan</TITLE>
-</HEAD>
-<link rel="stylesheet" type="text/css" href="style.css">
-<STYLE>
-H2 {font-size:18pt; text-align:center; color:#00957E; }
-H3 {color:#AA77AA; font-size:20pt;}
-H4 {margin-left:0.2in; margin-right:0.2in; text-align:center;
-font-size:18pt; color:#454311; background:#F617FF }
-LI {font-size:18pt; text-indent:0.2in; text-weight:400; line-height:1.2em;
-background:#ea4c89; border-style:outset; border-color: white; border-width:5px; padding:20px; }
-UL {background:#AAFFFF; border: 20px black; padding:20px; spacing:20px;}
-TH {font-size:18pt}
-TD {font-size:16pt; text-align:center; spacing: 10px;}
-P {font-size:16pt; }
-BLOCKQUOTE {font-size:20pt; color:#FFFFFF; }
-</STYLE>
-
-
-
-<BODY BGCOLOR=#9ACD32 LINK=#343F00 VLINK=#cb2027 ALINK=##E4FF00>
-
-
-
-<div id="sun">
-    <img src="images/sun.png" class="ribbon"/>
-</div>
-
-<div id="spy_kids">
-    <img src="images/spy_kids.png" class="ribbon"/>
-</div>
-
-<div id="jesus">
-    <img src="images/jesus.png" class="ribbon"/>
-</div>
-
-<CENTER><table border=9 frame=circle bgcolor=#D0FF33 cellpadding=15><th>
-<FONT SIZE=5 COLOR=#2AA1FF><p class="embarrassing"><strong>Nathan Turczan</strong>
-<br><I>Computer Musician, Composer</I><br>&#9835;</font></p></th></table></center>
-
-<CENTER><table border=9 frame=box bgcolor=#EBC92F cellpadding=15><th>
-<FONT SIZE=5 COLOR=#A90054 class ="handwrite">'s presence on the "internet"<br>
-<FONT SIZE=4 COLOR=#C70B8C class ="typewriter">
-<I>aka</I><BR>world wide web <sup>cyber</sup><sub>space </sub>community</font></B></th>
-</table></CENTER>
-
-
-<P><CENTER><TABLE BORDER=9 FRAME=box BGCOLOR=#bb0000 CELLPADDING=10>
-<table background="images/wood1.png">
-<TR><TD>
-<CENTER><FONT SIZE=5 COLOR=#FFFFFF class ="handwrite2"><b><mark><B>cryogenics</B>=<I>calisthenics</I></mark><br> "Milk is released thru pores in the skin...<br> when I hear Eduardo play violin!"</b>
-
-</FONT></CENTER>
-   </TD></TR></TABLE> </CENTER>
-
-   
-
-<p><center><table border=9 frame=box background="images/wood3.png"><tr><td>
-<table border=9 frame=box cellpadding=10 bgcolor=#5B9A68><th><A href="scale_rack/download_scale_rack.html">
-download<br>7-note pressing scale<br>scale rack</A></th>
-</table></td>
-
-<table border=9 frame=box cellpadding=10 bgcolor=#45668e><th><A HREF="mapper/client.html">
-MIDI mapper<br>4 Ableton Scale Rack</A></th>
-</table></td>
-
-<table border=9 frame=box cellpadding=10 bgcolor=#ff0084><th><A HREF="midi/index.html">
-Updated<br>Scale<br>Navigator</A></th>
-</table></td>
-
-</tr>
-
-<tr>
-<td>
-<table border=9 frame=box cellpadding=10 bgcolor=#32506d><th><A href="ONEY/index.html">
-🤶Seraphina😈<br>👸Oney🧝‍♀️</A></th>
-</table></td>
-
-<td><table border=9 frame=box cellpadding=10 bgcolor=#517fa4><th><a href="store/store.html">
-Consumer Sound Art:<br>BUY BUY BUY BUY BUY</A></th></table></td>
-
-<td>
-<table border=9 frame=box cellpadding=10 bgcolor=#ff3a00><th><A HREF="http://www.soundcloud.com/swancest">
-SoundCloud</A></th>
-</table></td>
-
-</tr>
-
-
-
-
-<tr><td>
-<table border=9 frame=box cellpadding=10 bgcolor=#0072b1><th><A HREF="impressions/index.html">
-CHORDAS | Heptagrams<br>Interactive Screen Score</A></th>
-</table></td><td>
-
-<td><table border=9 frame=box cellpadding=10 bgcolor=#4CF87B><th><A HREF="scale_netw/index.html">
-Old 80's Version <br> Network</A></th>
-</table></td><td>
-
-<td><table border=9 frame=box cellpadding=10 bgcolor=#aad450><th><A href="pizza_ladder/index.html">
-Ur Ear Bones<br>Get Massaged</A></th>
-</table></td>
+<head>
+  <title>Nathan Turczan</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
     
-<td><table border=9 frame=box cellpadding=10 bgcolor=##a8f3ff><th><A href="all_pressing_scales/index.html">
-ALL pressing scales<br>NETWORK</A></th>
-</table></td>
+  <header class="container">
+  <div class="row">
+    <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
+    <nav class="nav">
+      <p>sound design</p>
+      <p>music</p>
+      <p>UI design</p>
+      <p>installation</p>
+      <p>video</p>
+      <p>experiments</p>
+      <p>about</p>
+    </nav>
+ </div>
+</header>
+
+<div class="main">
+</div>
+
+<section>
+  <nav>
+  	<div class="iframe-container">
+		<iframe width="480" height="270"  src="https://www.youtube.com/embed/XJohtj7R0Nk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+  </nav>
+  
+  <article>
+    <h1>Music for Sitting in the Wet Grass (2018)</h1>
+    <p>Music for Sitting in the Wet Grass (2018) is an improvised work for disklavier and prepared player piano composed by Nathan Turczan, conceived by Madeline Falcone, McLean Macionis and Turczan, and performed by Macionis and Turczan at the October 2018 CalArts Machines and Strings concert Part I. Inspired by the spacey, measured chords of Tyshawn Sorey's "Permutations for Solo Piano," Turczan creates a flat sonic landscape in which chords are repeated (or not) in bell-like tollings, focusing on small one-note changes in a meditative study of piano resonance.</p>
+
+	<p>Conceptually derived from Turczan's exploration of  scale networks (as described by Dmitri Tymoczko), the music navigates a web of forty-eight seven-note musical scales and their intersections. </p>
+
+  </article>
+</section>
+
+<section>
+  <nav>
+  	<div class="iframe-container">
+  		<iframe src="https://www.youtube.com/embed/dmfJexDdbV0?rel=0&modestbranding=1&showinfo=0" width="480" height="270" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  	</div>
+  </nav>
+  
+  <article>
+    <h1>Modal Intersections (2018)</h1>
+    <p>This installation is comprised of player pianos, video projection, and custom touch interface.</p> 
+	<p>October 15 2018 - October 22 2018 in the CalArts WaveCave B303.</p>
+	<p>The Scale Navigator is open on an iPad embedded in a podium in the middle of the space, and participants are invited to touch the screen, triggering two opposing Yamaha DisKlaviers to play melodies and arpeggios in the selected scale. Each scale is accompanied by its own looping video of roadway intersections in Los Angeles: a highway intersection for each harmonic intersection.</p>
+	</article>
+</section>
+
+<footer>
+  <CENTER><img src="http://www.nathanturczan.com/images/keyboard.png"
+
+     width="500"
+     height="50"
+     title="Realistic Concertmate-600"></CENTER>
+</footer>
     
-
-</tr>
-
-<tr>
-
-<TD>
-<table border=9 frame=box cellpadding=10 bgcolor=#EB4823><th><a href="julia/index.html">
-historia<br>juliana</A></th>
-</table></td>
-
-<td><table border=9 frame=box cellpadding=10 bgcolor=#7B0099><th><A href="morph/bad.html">
-instruments<br>of the "sound"<br>music</A></th>
-</table></td>
-
-<table border=9 frame=box cellpadding=10 bgcolor=#fb8f3d><th><A HREF="Visuals_index_output/index.html">
-Scale Navigator<br>sends MIDI cc<br>to TouchDesigner</A></th>
-</table></td>
-
-</tr>
-</table></center>
-
-<CENTER><img src="images/keyboard.png"
-
-     alt="The head and torso of a dinosaur skeleton;
-          it has a large head with long sharp teeth"
-     width="1000"
-     height="100"
-     title="A T-Rex on display in the Manchester University Museum"></CENTER>
-
- 
-
-
-
 </body>
-</html>
+    </html>
