added links to navbar

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    
+
+
+  
   <header class="container">
   <div class="row">
     <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
-      <p>sound design</p>
-      <p>music</p>
-      <p>UI design</p>
-      <p>installation</p>
-      <p>video</p>
-      <p>experiments</p>
-      <p>about</p>
+      <p><a HREF="sound_design/index.html">sound design</a></p>
+      <p><a HREF="music/index.html">music</a></p>
+      <p><a HREF="apps/index.html">UI design</a></p>
+      <p><a HREF="installation/index.html">installation</a></p>
+      <p><a HREF="video/index.html">video</a></p>
+      <p><a HREF="experiments/index.html">experiments</a></p>
+      <p><a HREF="about/index.html">about</a></p>
     </nav>
  </div>
 </header>
@@ -48,6 +50,7 @@
   	<div class="iframe-container">
   		<iframe src="https://www.youtube.com/embed/dmfJexDdbV0?rel=0&modestbranding=1&showinfo=0" width="480" height="270" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   	</div>
+
   </nav>
   
   <article>
@@ -65,6 +68,14 @@
      height="50"
      title="Realistic Concertmate-600"></CENTER>
 </footer>
-    
+
+
+
 </body>
+
     </html>
+
+
+
+
+
