--- a/apps/scale_navigator_HEPTATONIC-piano/index.html
+++ b/apps/scale_navigator_HEPTATONIC-piano/index.html
@@ -13,7 +13,7 @@
     <script language="javascript" src="libraries/p5.dom.js"></script>
     <!-- <script language="javascript" src="libraries/p5.sound.js"></script> -->
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.6.3/Tone.min.js"></script>
+    <script type="text/javascript" src="https://tonejs.github.io/build/r6/p5.Tone.min.js"></script>
     
     <script language="javascript" type="text/javascript" src="vexflow-debug.js"></script>
 
