--- a/apps/index.html
+++ b/apps/index.html
@@ -15,13 +15,7 @@
   <div class="row">
     <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
-      <p>sound design</p>
-      <p>music</p>
-      <p>UI design</p>
-      <p>installation</p>
-      <p>video</p>
-      <p>experiments</p>
-      <p>about</p>
+      <p>applications</p>
     </nav>
  </div>
 </header>
@@ -31,16 +25,14 @@
 
 <section>
   <nav>
-  	<div class="iframe-container">
-		<iframe width="480" height="270"  src="https://www.youtube.com/embed/XJohtj7R0Nk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  	
 	</div>
   </nav>
   
   <article>
-    <h1>Music for Sitting in the Wet Grass (2018)</h1>
-    <p>Music for Sitting in the Wet Grass (2018) is an improvised work for disklavier and prepared player piano composed by Nathan Turczan, conceived by Madeline Falcone, McLean Macionis and Turczan, and performed by Macionis and Turczan at the October 2018 CalArts Machines and Strings concert Part I. Inspired by the spacey, measured chords of Tyshawn Sorey's "Permutations for Solo Piano," Turczan creates a flat sonic landscape in which chords are repeated (or not) in bell-like tollings, focusing on small one-note changes in a meditative study of piano resonance.</p>
+    <h1>Heptatonic Scale Navigator</h1>
+    <p>Navigate a network of the following seven-note scales: Diatonic, Acoustic, Harmonic Major, and Harmonic Minor.</p>
 
-	<p>Conceptually derived from Turczan's exploration of  scale networks (as described by Dmitri Tymoczko), the music navigates a web of forty-eight seven-note musical scales and their intersections. </p>
 
   </article>
 </section>
@@ -48,25 +40,19 @@
 <section>
   <nav>
   	<div class="iframe-container">
-  		<iframe src="https://www.youtube.com/embed/dmfJexDdbV0?rel=0&modestbranding=1&showinfo=0" width="480" height="270" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  		
   	</div>
 
   </nav>
   
   <article>
-    <h1>Modal Intersections (2018)</h1>
-    <p>This installation is comprised of player pianos, video projection, and custom touch interface.</p> 
-	<p>October 15 2018 - October 22 2018 in the CalArts WaveCave B303.</p>
-	<p>The Scale Navigator is open on an iPad embedded in a podium in the middle of the space, and participants are invited to touch the screen, triggering two opposing Yamaha DisKlaviers to play melodies and arpeggios in the selected scale. Each scale is accompanied by its own looping video of roadway intersections in Los Angeles: a highway intersection for each harmonic intersection.</p>
+    <h1>Pressing Scale Navigator</h1>
+    <p>Navigate a network of the Pressing Scales: Diatonic, Acoustic, Harmonic Major, Harmonic Minor, Whole Tone, Octatonic, and Hexatonic</p>
 	</article>
 </section>
 
 <footer>
-  <CENTER><img src="http://www.nathanturczan.com/images/keyboard.png"
 
-     width="500"
-     height="50"
-     title="Realistic Concertmate-600"></CENTER>
 </footer>
 
 
