--- a/apps/index.html
+++ b/apps/index.html
@@ -25,8 +25,9 @@
 
 <section>
   <nav>
-  	
-	</div>
+    <div class="iframe-container">
+      <img src="/images/pressing_scalenav.png" style="width:128px;height:128px;">
+  	</div>
   </nav>
   
   <article>
@@ -40,7 +41,7 @@
 <section>
   <nav>
   	<div class="iframe-container">
-  		
+  		<img src="/images/pressing.png"  style="width:128px;height:128px;">
   	</div>
 
   </nav>
