--- a/apps/index.html
+++ b/apps/index.html
@@ -29,7 +29,7 @@
 <section>
   <nav>
     <div class="iframe-container">
-      <img src="/images/pressing_scalenav.png" style="width:480px;height:270px;">
+      <img src="/images/hept_scalenav.png">
   	</div>
   </nav>
   
@@ -44,7 +44,7 @@
 <section>
   <nav>
   	<div class="iframe-container">
-  		<img src="/images/pressing.png" style="width:480px;height:270px;">
+  		<img src="/images/pressing.png">
   	</div>
 
   </nav>
