--- a/apps/index.html
+++ b/apps/index.html
@@ -28,9 +28,9 @@
 
 <section>
   <nav>
-    <div class="iframe-container">
-      <img src="/images/hept_scalenav.png">
-  	</div>
+
+      <a href="href="apps/scale_navigator_HEPTATONIC/index.html><img src="hept_scalenav.png" class="responsive"></a>
+
   </nav>
   
   <article>
@@ -43,16 +43,16 @@
 
 <section>
   <nav>
-  	<div class="iframe-container">
-  		<img src="/images/pressing.png">
-  	</div>
+
+      <a href="href="apps/pressing_scale_navigator/index.html><img src="pressing.png" class="responsive"></a>
+
 
   </nav>
   
   <article>
     <h1>Pressing Scale Navigator</h1>
     <p>Navigate a network of the Pressing Scales: Diatonic, Acoustic, Harmonic Major, Harmonic Minor, Whole Tone, Octatonic, and Hexatonic</p>
-	</article>
+  </article>
 </section>
 
 <footer>
@@ -64,8 +64,3 @@
 </body>
 
     </html>
-
-
-
-
-
