--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <div class="row">
     <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
-      <p><a HREF="sound_design/">sound design</a></p>
-      <p><a HREF="music/">music</a></p>
-      <p><a HREF="apps/">UI design</a></p>
-      <p><a HREF="installation/">installation</a></p>
-      <p><a HREF="video/">video</a></p>
-      <p><a HREF="experiments/">experiments</a></p>
-      <p><a HREF="about/">about</a></p>
+      <p><a HREF="sound_design/index.html">sound design</a></p>
+      <p><a HREF="music/index.html">music</a></p>
+      <p><a HREF="apps/index.html">UI design</a></p>
+      <p><a HREF="installation/index.html">installation</a></p>
+      <p><a HREF="video/index.html">video</a></p>
+      <p><a HREF="experiments/index.html">experiments</a></p>
+      <p><a HREF="about/index.html">about</a></p>
     </nav>
  </div>
 </header>
