--- a/apps/index.html
+++ b/apps/index.html
@@ -29,12 +29,12 @@
 <section>
   <nav>
 
-      <a href="scale_navigator_HEPTATONIC/index.html"><img src="hept_scalenav.png" class="responsive"></a>
+      <a href="scale_navigator_HEPTATONIC/index"><img src="hept_scalenav.png" class="responsive"></a>
 
   </nav>
   
   <article>
-    <h1>Heptatonic Scale Navigator</h1>
+    <h1><a href="scale_navigator_HEPTATONIC/index.html">Heptatonic Scale Navigator</a></h1>
     <p>Navigate a network of the following seven-note scales: Diatonic, Acoustic, Harmonic Major, and Harmonic Minor.</p>
 
 
@@ -44,13 +44,13 @@
 <section>
   <nav>
 
-      <a href="pressing_scale_navigator/index.html"><img src="pressing.png" class="responsive"></a>
+      <a href="pressing_scale_navigator/index"><img src="pressing.png" class="responsive"></a>
 
 
   </nav>
   
   <article>
-    <h1>Pressing Scale Navigator</h1>
+    <h1><a href="pressing_scale_navigator/index">Pressing Scale Navigator</a></h1>
     <p>Navigate a network of the Pressing Scales: Diatonic, Acoustic, Harmonic Major, Harmonic Minor, Whole Tone, Octatonic, and Hexatonic</p>
   </article>
 </section>
