added autopilot checkbox

--- a/apps/pressing_scale_navigator/index.html
+++ b/apps/pressing_scale_navigator/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
   <head>  
     <meta charset="UTF-8">
-    <title>Pressing Scale Navigator</title>
+    <title>ntwrk - all pressing scales</title>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
 
@@ -28,13 +28,13 @@ html{overflow:hidden;}
   top: 0;
 }
 
-  
-
 }
 </style>
   </head>
-  
   <body>
     <div id="boo"></div>
+    <form align="right" >
+      <input type="checkbox" id="autopilot_checkbox"  onclick="draw()"> autopilot<br>
+    </form>
   </body>
 </html>
