--- a/apps/pressing_scale_navigator/index.html
+++ b/apps/pressing_scale_navigator/index.html
@@ -28,13 +28,19 @@ html{overflow:hidden;}
   top: 0;
 }
 
+input[type=checkbox] {
+    transform: scale(3);
+    top: 0;
+}
+
 }
 </style>
   </head>
+  
   <body>
     <div id="boo"></div>
     <form align="right" >
-      <input type="checkbox" id="autopilot_checkbox"  onclick="draw()"> autopilot<br>
+      <input type="checkbox" id="autopilot_checkbox"  onclick="draw()"> <font size="10">autopilot<br>
     </form>
   </body>
 </html>
