--- a/apps/index.html
+++ b/apps/index.html
@@ -35,7 +35,7 @@
   
   <article>
     <h1><a href="scale_navigator_HEPTATONIC/index.html">Heptatonic Scale Navigator</a></h1>
-    <p>Navigate a network of the following seven-note scales: Diatonic, Acoustic, Harmonic Major, and Harmonic Minor.</p>
+    <p>Navigate a network of the following seven-note scales: Diatonic, Acoustic, Harmonic Major, and Harmonic Minor. Here's the <a href="mapper/index.html">Mapper</a> for Ableton Live.</p>
 
 
   </article>
