--- a/music/index.html
+++ b/music/index.html
@@ -104,13 +104,13 @@
 <section>
   <nav>
     <div class="iframe-container">
-      <iframe width="480" height="720" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/347277978&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+      <iframe width="480" height="720" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289467692&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     </div>
   </nav>
   
   <article>
-    <h1>A Perfect Mess (2017)</h1>
-    <p>The most perfect mess you could imagine.</p>
+    <h1>D# E (2016)</h1>
+    <p>D# to E somewhat randomly while I improvise harmonies on my Kawai SR4 Electric Organ. Heavily inspired by early works of Daniel Lopatin</p>
 
   </article>
 </section>
