--- a/music/index.html
+++ b/music/index.html
@@ -17,44 +17,32 @@
     <nav class="nav">
       <p>performances</p>
       <p>tracks</p>
-      <p>scores</p>
+      <p>video scoring</p>
     </nav>
  </div>
 </header>
 
 <div class="main">
 </div>
-
-<section>
-  <nav>
-  	<div class="iframe-container">
-		<iframe width="480" height="270"  src="https://www.youtube.com/embed/XJohtj7R0Nk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
-  </nav>
-  
-  <article>
-    <h1>Music for Sitting in the Wet Grass (2018)</h1>
-    <p>Music for Sitting in the Wet Grass (2018) is an improvised work for disklavier and prepared player piano composed by Nathan Turczan, conceived by Madeline Falcone, McLean Macionis and Turczan, and performed by Macionis and Turczan at the October 2018 CalArts Machines and Strings concert Part I. Inspired by the spacey, measured chords of Tyshawn Sorey's "Permutations for Solo Piano," Turczan creates a flat sonic landscape in which chords are repeated (or not) in bell-like tollings, focusing on small one-note changes in a meditative study of piano resonance.</p>
-
-	<p>Conceptually derived from Turczan's exploration of  scale networks (as described by Dmitri Tymoczko), the music navigates a web of forty-eight seven-note musical scales and their intersections. </p>
-
-  </article>
-</section>
-
+	
+<a id="video_scoring">
+	
 <section>
   <nav>
     <div class="iframe-container">
-      <iframe width="480" height="270" src="https://www.youtube.com/embed/piCruZ5oHZ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+	    <iframe src="https://player.vimeo.com/video/200293623" width="480" height="270" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/200293623">Walking Backwards</a> from <a href="https://vimeo.com/turczan">Lachlan Turczan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+	  </div>
   </nav>
   
   <article>
-    <h1>Lydian Reflections (2018)</h1>
-    <p>World premiere of "Lydian Reflections" at CalArts' Wild Beast Music Pavilion on October 13, 2018. Composition and performance by Nathan Turczan and McLean Macionis. From the program notes:</p>
+    <h1>HMU hbu (2019)</h1>
+    <p>hit me up. how about you?</p>
 
-    <p>"Lydian Reflections" (2018) is a one-movement improvisational work for mechatronic piano and electronics by McLean Macionis and Nathan Turczan. The piece is the second in a growing collection of new works by the artists and expresses their fascination with theoretical, network-based harmony, MIDI modulations and digital signal processing. The Greek myth of Echo & Narcissus provides the narrative by which these technical concepts come to life. Turczan embodies the beautiful hunter Narcissus, communicating through phrases consisting of scraping metal and beating piano wire played using the mechatronic piano - affectionately named Lydia. Macionis, who embodies the mountain nymph Echo, reflects these phrases using an assortment of sound capturing tools, creating vivid and haunting repetitions Turczan’s playing.</p>
   </article>
 </section>
+
+<a id="tracks">
 
 <section>
   <nav>
@@ -133,6 +121,39 @@
     <p>And I dont know what happened after that.</p>
 
 
+  </article>
+</section>
+	
+<a id="performance">
+	
+<section>
+  <nav>
+  	<div class="iframe-container">
+		<iframe width="480" height="270"  src="https://www.youtube.com/embed/XJohtj7R0Nk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+  </nav>
+  
+  <article>
+    <h1>Music for Sitting in the Wet Grass (2018)</h1>
+    <p>Music for Sitting in the Wet Grass (2018) is an improvised work for disklavier and prepared player piano composed by Nathan Turczan, conceived by Madeline Falcone, McLean Macionis and Turczan, and performed by Macionis and Turczan at the October 2018 CalArts Machines and Strings concert Part I. Inspired by the spacey, measured chords of Tyshawn Sorey's "Permutations for Solo Piano," Turczan creates a flat sonic landscape in which chords are repeated (or not) in bell-like tollings, focusing on small one-note changes in a meditative study of piano resonance.</p>
+
+	<p>Conceptually derived from Turczan's exploration of  scale networks (as described by Dmitri Tymoczko), the music navigates a web of forty-eight seven-note musical scales and their intersections. </p>
+
+  </article>
+</section>
+
+<section>
+  <nav>
+    <div class="iframe-container">
+      <iframe width="480" height="270" src="https://www.youtube.com/embed/piCruZ5oHZ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </nav>
+  
+  <article>
+    <h1>Lydian Reflections (2018)</h1>
+    <p>World premiere of "Lydian Reflections" at CalArts' Wild Beast Music Pavilion on October 13, 2018. Composition and performance by Nathan Turczan and McLean Macionis. From the program notes:</p>
+
+    <p>"Lydian Reflections" (2018) is a one-movement improvisational work for mechatronic piano and electronics by McLean Macionis and Nathan Turczan. The piece is the second in a growing collection of new works by the artists and expresses their fascination with theoretical, network-based harmony, MIDI modulations and digital signal processing. The Greek myth of Echo & Narcissus provides the narrative by which these technical concepts come to life. Turczan embodies the beautiful hunter Narcissus, communicating through phrases consisting of scraping metal and beating piano wire played using the mechatronic piano - affectionately named Lydia. Macionis, who embodies the mountain nymph Echo, reflects these phrases using an assortment of sound capturing tools, creating vivid and haunting repetitions Turczan’s playing.</p>
   </article>
 </section>
 
