--- a/music/index.html
+++ b/music/index.html
@@ -15,9 +15,9 @@
   <div class="row">
     <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
-      <p>performances</p>
-      <p>tracks</p>
-      <p>video scoring</p>
+      <p><a href="video_scoring">video scoring</a></p>
+      <p><a href="tracks">tracks</a></p>
+      <p><a href="performance">performance</a></p>
     </nav>
  </div>
 </header>
