--- a/music/index.html
+++ b/music/index.html
@@ -15,9 +15,9 @@
   <div class="row">
     <h1 class="col-sm-8"><b>NATHAN TURCZAN</b></h1>
     <nav class="nav">
-      <p><a href="video_scoring">video scoring</a></p>
-      <p><a href="tracks">tracks</a></p>
-      <p><a href="performance">performance</a></p>
+      <p><a href="#video_scoring">video scoring</a></p>
+      <p><a href="#tracks">tracks</a></p>
+      <p><a href="#performance">performance</a></p>
     </nav>
  </div>
 </header>
@@ -36,9 +36,40 @@
   </nav>
   
   <article>
-    <h1>HMU hbu (2019)</h1>
-    <p>hit me up. how about you?</p>
+    <h1>Walking Backwards (2017)</h1>
+    <p>A man walks backwards into a deeper state of consciousness. <br>Music by Nathan Turczan.<br>Filmed August 2016 in Macau</p>
 
+  </article>
+</section>
+	
+<section>
+  <nav>
+    <div class="iframe-container">
+      <iframe src="https://player.vimeo.com/video/245069362" width="480" height="720" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/245069362">a perfect mess</a> from <a href="https://vimeo.com/turczan">Lachlan Turczan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+	  </div>
+  </nav>
+  
+  <article>
+    <h1>A Perfect Mess (2018)</h1>
+    <p>an experimental animation that presents chaotic patterns that resolve into predetermined design. created with custom software developed by WET in 1998 to choreograph the Bellagio fountains.<br>film by lachlan turczan<br>music by nathan turczan</p>
+
+  </article>
+</section>
+	
+<section>
+  <nav>
+    <div class="iframe-container">
+      <iframe src="https://player.vimeo.com/video/68821283" width="480" height="720" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/68821283">Fluorescent Sunset</a> from <a href="https://vimeo.com/turczan">Lachlan Turczan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+	  </div>
+  </nav>
+  
+  <article>
+    <h1>Fluorescent Sunset (2013)</h1>
+    <p>A collaborative light painting created with the help of Anthony Dahut.<br>
+Inspired by the light works of James Turrell.<br> 
+Music by Nathan Turczan</p>
   </article>
 </section>
 
