--- a/music/index.html
+++ b/music/index.html
@@ -22,10 +22,9 @@
  </div>
 </header>
 
-<div class="main">
-</div>
+
 	
-<a id="video_scoring">
+<a id="video_scoring">video scoring</a>
 	
 <section>
   <nav>
@@ -73,7 +72,7 @@ Music by Nathan Turczan</p>
   </article>
 </section>
 
-<a id="tracks">
+<a id="tracks">tracks</a>
 
 <section>
   <nav>
@@ -155,7 +154,7 @@ Music by Nathan Turczan</p>
   </article>
 </section>
 	
-<a id="performance">
+<a id="performance">performance</a>
 	
 <section>
   <nav>
